syntax = "proto3";

package chalgen;

// The protobuf definition for a graph-based challenge generation system.

message GenerateRequest {
  Graph graph = 1;
}

message GenerateResponse {
  // Define the response structure here
}

message Graph {
  repeated Node nodes = 1;
  repeated Edge edges = 2;
}

message Node {
  string id = 1;
  string name = 2;
  string flag = 3;
  oneof challenge {
    Base64 base64 = 4;
    Twitter twitter = 5;
    CaesarCipher caesar = 6;
  }
}

message Edge {
  string from = 1;
  string to = 2;
}

message CaesarCipher {
  string plaintext = 1;
  int32 shift = 2;
}

message Base64 {
  string data = 1;
}

message Twitter {
  repeated User users = 1;
  repeated Post posts = 2;
  repeated Comment comments = 3;
}

message User {
  int64 id = 1;
  string username = 2;
  string bio = 3;
}

// Post represents a user's post.
message Post {
  int64 id = 1;
  int64 user_id = 2;
  string content = 3;
  int64 timestamp = 4; // Unix timestamp
}

// Comment represents a comment on a post.
message Comment {
  int64 id = 1;
  int64 post_id = 2;
  int64 user_id = 3;
  string content = 4;
  int64 timestamp = 5; // Unix timestamp
}

service ChalgenService {
}
